# mwdb-parser

./: .gitignore  Makefile.am  configure.ac
doc/: CreatingWDBDefinitions.txt  Makefile.am
doc/examples/: Makefile.am  itemcache-skim.fmt  itemcache.fmt  itennamecache.fmt  npccache.fmt
src/: Makefile.am  wdb2sql.c  wdb2sql.h
